minikube/kuma/demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kuma-demo
  labels:
    kuma.io/sidecar-injection: enabled
    kuma.io/mesh: ranjithka
