minikube/kuma/kuma-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma
  namespace: kuma-system  # Added namespace
  labels:
    app.kubernetes.io/name: kuma
    app.kubernetes.io/app: kuma-control-plane
    app.kubernetes.io/instance: kuma-control-plane
    app.kubernetes.io/managed-by: ranjith-ka
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/http2-push-preload: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffer-size: 8k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  ingressClassName: dev-nginx
  rules:
    - host: "kuma.example.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kuma-control-plane
                port:
                  number: 5681
